add checkable menu fix os bug